---------------------------------------------------------------------------------------------------
Version: 2.0.4
Date: ????
  Changes:
    - support other mods registering additional number formats
    - use the entity color if 'Use Colors' option is not selected
      - entity color changes may not be reflected immediately, update the value or format signals to force a refresh
---------------------------------------------------------------------------------------------------
Version: 2.0.3
Date: 2025-07-18
  Changes:
    - updated icons of remaining extra virtual signals to match 2.0 style
    - fix colors on alpha nixies
    - enable/disable conditions now work on alpha nixies to turn the dispaly off entirely
    - enable/disable condition now forced always-on for numeric nixies (used for tracking when signals changes)
    - renamed `signal-float` to `signal-number-type`
    - added fixed-point and unsigned number types
    - added four char ASCII and Typecode types. `signal-number-type` always renders as Typecode.
---------------------------------------------------------------------------------------------------
Version: 2.0.2
Date: 2025-02-11
  Changes:
    - unify virtual signals with the ones added to base in 2.0.34
    - fix error when removing mods providing signals used in nixies
---------------------------------------------------------------------------------------------------
Version: 2.0.1
Date: 2024-10-18
  Changes:
    - cleanup unused prototype fields
---------------------------------------------------------------------------------------------------
Version: 2.0.0
Date: 2024-10-17
  Changes:
    - Updated for Factorio 2.0
    - Support for `double` by sending hex=2 and value high half on green, low half on red
---------------------------------------------------------------------------------------------------
Version: 1.1.5
Date: 2024-04-11
  Changes:
    - removed simhelper, use native sim mod loading