@@ -5,6 +5,7 @@ Date: ????
     - support other mods registering additional number formats
     - use the entity color if 'Use Colors' option is not selected
       - entity color changes may not be reflected immediately, update the value or format signals to force a refresh
+      - a one-time migration will reset the colors to default on tubes that were set as white, as this seems to be a common condition for old blueprint
 ---------------------------------------------------------------------------------------------------
 Version: 2.0.3
 Date: 2025-07-18
